2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (read_dumptype): Parse SSH_KEYS.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c (udp_inithandle): Remove bad merge.
	* server-src/amindexd.c: Improve error message.
	* server-src/planner.c: Add a space in output.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c: Set dpcur.no_hold correctly,
				 Fix for conffile program.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>
	Allow many services to share the same tcp connection for
	bsdtcp/ssh/rsh.
	Add a security_close_connection to the security-api.
	* amandad-src/amandad.c (wait_30s, exit_on_qlength): New variable to
					control auth specific behaviour.
	* common-src/bsd-security.c: Add sec_close_connection_none.
	* common-src/bsdudp-security.c: Add sec_close_connection_none.
	* common-src/krb4-security.c: Add sec_close_connection_none.
	* common-src/krb5-security.c: Add sec_close_connection_none.
	* common-src/security.h (security_close_connection): Prototype.
	* common-src/security-util.h (sec_close_connection_none,
				      tcpm_close_connection): Prototype.
	* common-src/security-util.h (struct tcp_conn): Add toclose.
	* common-src/security-util.h (struct sec_stream): Add closed_by_me and
							  closed_by_network.
	* common-src/security-util.c (sec_close_connection_none,
				      tcpm_close_connection): New function.
	* common-src/security-util.c: Handle many services on one connection.
	* common-src/bsdtcp-security.c: Handle many services on one connection.
	* common-src/rsh-security.c: Handle many services on one connection.
	* common-src/ssh-security.c: Handle many services on one connection.
	* recover-src/amrecover.c: Add call security_close_connection.
	* recover-src/extract_list.c: Add call security_close_connection.
	* server-src/amcheck.c: Add call security_close_connection.
	* server-src/dumper.c: Add call security_close_connection.
