@@ -84,9 +84,9 @@ install-exec-hook:
 lint:
 	@ for p in $(libexec_PROGRAMS) $(EXTRA_PROGRAMS); do			\
 		f="$$p.c $(libamandad_la_SOURCES)";				\
-		f="$$f "`(cd ../common-src; make listlibsrc 2>&1 > /dev/null)`;	\
-		f="$$f "`(cd ../server-src; make listlibsrc 2>&1 > /dev/null)`;	\
-		f="$$f "`(cd ../tape-src; make listlibsrc 2>&1 > /dev/null)`;	\
+		f="$$f "`(cd ../common-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
+		f="$$f "`(cd ../server-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
+		f="$$f "`(cd ../tape-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
 		echo $(LINT) $$f;						\
 		$(LINT) $(LINTFLAGS) $(CPPFLAGS) $(DEFS) -I. -I../config	\
 		    $(INCLUDES) $$f;						\
