@@ -110,7 +110,7 @@ endif
 lint:
 	@ for p in $(libexec_PROGRAMS); do					\
 		f="$$p.c $(libamclient_la_SOURCES)";				\
-		f="$$f "`(cd ../common-src; make listlibsrc 2>&1 > /dev/null)`;	\
+		f="$$f "`(cd ../common-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
 		echo $(LINT) $$f;						\
 		$(LINT) $(LINTFLAGS) $(CPPFLAGS) $(DEFS) -I. -I../config	\
 		    $(INCLUDES) $$f;						\
