@@ -68,9 +68,9 @@ install-exec-hook:
 
 lint:
 	@ f="$(amrecover_CSRC)";						\
-	  f="$$f "`(cd ../common-src; make listlibsrc 2>&1 > /dev/null)`;	\
-	  f="$$f "`(cd ../server-src; make listlibsrc 2>&1 > /dev/null)`;	\
-	  f="$$f "`(cd ../tape-src; make listlibsrc 2>&1 > /dev/null)`;		\
+	  f="$$f "`(cd ../common-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
+	  f="$$f "`(cd ../server-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
+	  f="$$f "`(cd ../tape-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;		\
 	  echo $(LINT) $$f;							\
 	  $(LINT) $(LINTFLAGS) $(CPPFLAGS) $(DEFS) -I. -I../config $(INCLUDES) $$f;\
 	  if [ $$? -ne 0 ]; then						\
