@@ -89,7 +89,7 @@ lint:
 			s=$$p.c;						\
 		fi; 								\
 		f="$$s $(libamandad_la_SOURCES)";				\
-		f="$$f "`(cd ../common-src; make listlibsrc 2>&1 > /dev/null)`;	\
+		f="$$f "`(cd ../common-src; make listlibsrc 3>&1 1>/dev/null 2>/dev/null)`;	\
 		echo $(LINT) $$f;						\
 		$(LINT) $(LINTFLAGS) $(CPPFLAGS) $(DEFS) -I. -I../config	\
 		    $(INCLUDES) $$f;						\
@@ -103,4 +103,4 @@ listlibsrc:
 	@ for p in $(libamtape_la_SOURCES); do	\
 		listlibsrcs="$$listlibsrcs `pwd`/$$p";		\
 	done;							\
-	echo $$listlibsrcs 1>&2
+	echo $$listlibsrcs 1>&3
